--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,71 @@
 }
 
 html, body{
-	background: #000000;
+	width: 100%;
+	height: 100%;
+	background: #f4a408;
 	color: white;
+	overflow: hidden;
+}
+
+footer{
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	color: #000000;
+}
+
+.text-right{
+	text-align: right;
+}
+.text-center{
+	text-align: center;
+}
+.text-left{
+	text-align: left;
+}
+
+#menu{
+	background: #ea7c14;
+	position: absolute;
+	top:0;
+	left: 0;
+	width: 15%;
+	height: 100%;
+
+	z-index: 1;
+}
+
+#menu a{
+	text-decoration: none;
+}
+
+#menu div{
+	width: 80%;
+	padding: 5%;
+	color: black;
+
+	-webkit-transition: all ease 0.25s;
+	-moz-transition: all ease 0.25s;
+	transition: all ease 0.25s;
+}
+
+#menu div:hover{
+	background: #000000;
+	width: 100%;
+	color: #f4a408;
+
+	-webkit-transition: all ease 0.25s;
+	-moz-transition: all ease 0.25s;
+	transition: all ease 0.25s;
+}
+
+#menu ul a{
+	text-decoration: none;
+}
+
+.screen{
+	margin-left:15%;
 }
 
 .content{
