--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face{
 	font-family: pixelTitle;
-	src: url(../fonts/8-BIT_WONDER.ttf);
+	src: url(../fonts/UpheavalPro.ttf);
 }
 
 @font-face{
