--- a/css/style.css
+++ b/css/style.css
@@ -141,59 +141,40 @@ canvas{
 	border: 1px solid #ffffff;
 }
 
-#photoShower{
-
-}
-
-#photoShower #imageDiv{
-	margin: 10px 0px;
-}
-
-#photoShower #imageDiv .imgThumb{
-	border: 5px solid rgba(0,0,0,1);
-	width: 100px;
-	height: 100px;
-	cursor: pointer;
-}
-
-#photoShower #imageDiv .imgThumb:hover{	
-
-	-webkit-animation: selectPhoto 0.5s;
-	animation: selectPhoto 0.5s;
-
-	-webkit-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
-}
-#photoShower #imageDiv #imgFullDiv{
-	border: 0;
-}
-
-#photoShower #imageDiv #imgFullDiv img{
-	border: 10px solid #000;
+.imgShower{
+	margin-left: 50%;
+	position: relative;
+	left: -400px;
+	width: 800px;
+	height: 50px;
 	background: #000;
-	padding: 5px;
+	
+	background-repeat: no-repeat;
+	-webkit-transition: all 0.25s ease;
+	-webkit-filter: grayscale(100%);
+	-moz-transition: all 0.25s ease;
+	-moz-filter: grayscale(100%);
+	transition: all 0.25s ease;
+	filter: grayscale(100%);
 }
 
-@keyframes selectPhoto{
-	from{
-		border: 5px solid #ea7c14;
-	}
-	50%{
-		border: 5px solid orange;
-	}	
-	to{
-		border: 5px solid #ea7c14;
-	}
+.imgShower:hover{
+	height: 400px;
+
+	-webkit-filter: grayscale(0%);
+	-webkit-transition: all 0.25s ease;
+	-moz-filter: grayscale(0%);
+	-moz-transition: all 0.25s ease;
+	filter: grayscale(0%);
+	transition: all 0.25s ease;
 }
 
-@-webkit-keyframes selectPhoto{
-	from{
-		border: 5px solid #ea7c14;
-	}
-	50%{
-		border: 5px solid orange;
-	}	
-	to{
-		border: 5px solid #ea7c14;
-	}
+.imgShower .imgDescription{
+	width: 790px;
+	height: 50px;
+	padding: 0px 5px;
+	background: #000;
+	opacity: 0.5;
+	color: #fff;
 }
+
