--- a/cyberpunk/style/style.css
+++ b/cyberpunk/style/style.css
@@ -1,10 +1,10 @@
 @font-face{
 	font-family: "BitWonder";
-	src: url(../fonts/8-BIT_WONDER.ttf);
+	src: url('../fonts/8-BIT_WONDER.ttf');
 }
 @font-face{
 	font-family: "FreePixel";
-	src: url(../fonts/FreePixel.ttf);
+	src: url('../fonts/FreePixel.ttf');
 }
 *{
 	margin: 0;
