--- a/cyberpunk/style/style.css
+++ b/cyberpunk/style/style.css
@@ -100,18 +100,14 @@ button{
 	padding: 5px 10px;
 	font-size: 20px;
 	font-weight: bold;
-	background: url(../img/btn_hover2.png);
+	background: url(../img/btn.png);
 	/*border: 3px solid #331122;*/
 	border: 4px solid #331122;
 	border-top: 4px solid #dd77bb;
-
 	color: #fff;
 	cursor: pointer;
-
 	text-shadow: 0px 1px #000;
-
 }
-
 #menu #buttons button:hover{
 	/*background: url(../img/btn_hover.png);	
 	width: 200px;*/
@@ -147,7 +143,7 @@ button{
 	padding: 5px 10px;
 	font-size: 20px;
 	font-weight: bold;
-	background: url(../img/btn_hover2.png);
+	background: url(../img/btn.png);
 	/*border: 3px solid #331122;*/
 	border: 4px solid #331122;
 	border-top: 4px solid #dd77bb;
@@ -156,6 +152,13 @@ button{
 	cursor: pointer;
 
 	text-shadow: 0px 1px #000;
+}
+
+#instructions button:hover{
+	/*background: url(../img/btn_hover.png);	
+	width: 200px;*/
+	border: 4px solid #dd77bb;
+	border-top: 4px solid #331122;
 }
 /* CREDITS */
 
@@ -198,4 +201,42 @@ button{
 	width: 200px;*/
 	border: 4px solid #dd77bb;
 	border-top: 4px solid #331122;
+}
+
+/* GAME */
+#game{
+	background: #774466;
+}
+
+#game canvas{
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#game #hud{
+	font-family: "BitWonder";
+	position: relative;
+	top:0;
+	left: 0;
+	padding: 10px;
+}
+#game #hud table{
+	font-family: "BitWonder";
+	width: 100%;
+}
+
+#game #hud table td{
+	width: 260px;
+}
+
+#game #hud #time{
+	font-size: 40px;
+	text-shadow: 0px 4px #000;
+}
+
+#game #preCounter{
+	position: relative; 
+	top: 350px; 
+	font-size: 40px;
 }
