--- a/puzzle_line/css/style.css
+++ b/puzzle_line/css/style.css
@@ -183,6 +183,7 @@ div{
 #level{
 	position: absolute;
 	top:-600px;
+	opacity: 0;
 	webkit-animation: changeLevel 4s;	
 	moz-animation: changeLevel 4s;
 	animation: changeLevel 4s;
