--- a/css/style.css
+++ b/css/style.css
@@ -1,219 +1,87 @@
-@font-face{
-	font-family: pixelTitle;
-	src: url(../fonts/UpheavalPro.ttf);
-}
-
-@font-face{
-	font-family: pixel;
-	src: url(../fonts/FreePixel.ttf);
-}
-
-*{
-	margin: 0px;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
 html, body{
-	position: absolute;
-	top:0;
-	width: 100%;
 	height: 100%;
-	background: rgb(250,250,250);
-	color: #000;
-	overflow: hidden;
-	font-family: "pixel";
-	position: absolute;
-	top: 0;
 }
 
-a{
-	text-decoration: none;
-	color: #f4a408;
+body{
+	font-family: monospace;
+	display: grid;
+	margin: 0;
+
+	background-color: #000F19;
+	color: #fff;
 }
 
-a:hover{
-	text-decoration: underline;		
-}
-
-iframe{
-	border: none;
-	width: 800px;
-	height: 600px;
-}
-
-h1, h2, h3, h4, h5, h6{
-	padding: 1% 0;
-	font-family: "pixelTitle";	
-	font-size: 45px;
-}
-
-footer{
-	padding: 5px 0px;
-	width: 100%;
-	position: absolute;
-	bottom: 0;
-	color: #000000;
-}
-
-.bold{
-	font-family: "pixelTitle";
-	font-size: 20px;
-}
-
-.sliderButton{
-	width: 40px;
-	height: 40px;
-	border: 4px solid #000000;
-	background: white;
-	font-family: "pixelTitle";
-	background: #f4a408;
-	color: #000000;
-	cursor: pointer;
-
-	-webkit-transition: all 0.25s ease;
-	-moz-transition: all 0.25s ease;
-	transition: all 0.25s ease;
-}
-
-.sliderButton:hover{
-	width: 50px;
-	height: 40px;
-	border: 4px solid #000000;
-	background: white;
-	font-family: "pixelTitle";
-	background: #ea7c14;
-	color: #000000;
-	cursor: pointer;
-
-	-webkit-transition: all 0.25s ease;
-	-moz-transition: all 0.25s ease;
-	transition: all 0.25s ease;
+.padding-10{
+	padding: 10px;
 }
 
 .text-right{
 	text-align: right;
 }
-.text-center{
-	text-align: center;
-}
-.text-left{
-	text-align: left;
-}
 
-#menu{
-	padding-top: 15%;
-	background: rgb(250,190,00);
-	position: absolute;
-	top:0;
-	left: 0;
-	width: 15%;
-	height: 100%;
-	font-family: "pixelTitle";
-	font-size: 30px;
-	z-index: 1;
+.container{
+	display: grid;
+	grid-template-columns: 200px auto;
 }
 
-#menu div{
-	width: 80%;
-	padding: 5%;
-	color: black;
 
-	-webkit-transition: all ease 0.25s;
-	-moz-transition: all ease 0.25s;
-	transition: all ease 0.25s;
+.navigation{
+	grid-column: 1;
+
+	display: grid;
+	grid-template-rows: 90px auto;
 }
 
-#menu div:hover{
-	background: #000000;
-	width: 100%;
-	color: #f4a408;
-
-	-webkit-transition: all ease 0.25s;
-	-moz-transition: all ease 0.25s;
-	transition: all ease 0.25s;
+.navigation > nav{
+	display: flex;
+	flex-direction: column;
 }
 
-#menu a:hover{
-	text-decoration: none;		
-}
-
-#menu ul a{
+.navigation > nav > a{
 	text-decoration: none;
+	color:#fff;
 }
 
-.screen-out{
-	top: 100%;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-}
-
-.screen{
-	margin-left:15%;
-	padding: 1%;
-	width: 85%;
-	height: 100%;
-	position: absolute;
-	top: 100%;
-
-
-}
-
-.screen-active{
-	top: 0;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-	transition: all 0.5s;
+.navigation > nav > a:hover{
+	color: #FC3563;
 }
 
 .content{
-	text-align: center;
+	grid-column: 2;
 }
 
-canvas{
-	border: 1px solid #ffffff;
+.header{
+	font-size: 2em;
+	grid-row: 1;
+	height: 100%;
+
+	display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-.imgShower{
-	margin-left: 50%;
-	position: relative;
-	left: -400px;
-	width: 800px;
-	height: 50px;
-	background: #000;
-	
-	background-repeat: no-repeat;
-	-webkit-transition: all 0.25s ease;
-	-webkit-filter: grayscale(100%);
-	-moz-transition: all 0.25s ease;
-	transition: all 0.25s ease;
+.about{
+	grid-row: 2;
 }
 
-.imgShower:hover{
-	height: 400px;
-
-	-webkit-filter: grayscale(0%);
-	-webkit-transition: all 0.25s ease;
-	-moz-transition: all 0.25s ease;
-	transition: all 0.25s ease;
+.menu{
+	grid-row: 3;
 }
 
-.imgShower .imgDescription{
-	width: 790px;
-	height: 50px;
-	padding: 0px 5px;
-	background: #000;
-	opacity: 0.5;
-	color: #fff;
-}
-#home div, #contact div{
-	width: 600px;
-	margin-left: 50%;
-	position: relative;
-	left: -300px;
+.skill{
+	font-weight: bold;
 }
 
-#games div{
-	width: 800px;
-	margin-left: 50%;
-	position: relative;
-	left: -400px;
+.skill.low{
+	color: #f00;
+}
+
+.skill.medium{
+	color: #ff0;
+}
+
+.skill.good{
+	color: #0f0;
 }
