--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ a.active{
 
 .content{
 	grid-column: 2;
-    padding: 0 8%;
+    padding: 0 3%;
 }
 
 .header{
@@ -100,6 +100,7 @@ a.active{
 
 .terminal-user{
     color: #8ae234;
+    display: inline-block;
 }
 
 .terminal-tilde{
